force-app/main/default/objects/Allotment__c/Allotment__c.object-meta.xml
<CustomObject>
    <label>Allotment</label>
    <nameField>
        <displayFormat>ALMT-{00000}</displayFormat>
        <label>Allotment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allotments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>