force-app/main/default/objects/Allotment__c/fields/ACAR_Announcement_Date__c.field-meta.xml
<CustomField>
    <fullName>ACAR_Announcement_Date__c</fullName>
    <label>ACAR Announcement Date</label>
    <type>Date</type>
</CustomField>