force-app/main/default/objects/Allotment__c/fields/ACAR_Year__c.field-meta.xml
<CustomField>
    <fullName>ACAR_Year__c</fullName>
    <label>ACAR Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Past_Years</valueSetName>
    </valueSet>
</CustomField>