force-app/main/default/objects/Allotment__c/fields/Address_Location__c.field-meta.xml
<CustomField>
    <fullName>Address_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address Location</label>
    <referenceTo>Address_Location__c</referenceTo>
    <relationshipLabel>Allotments</relationshipLabel>
    <relationshipName>Allotments</relationshipName>
    <type>Lookup</type>
</CustomField>