force-app/main/default/objects/Allotment__c/fields/Adjusted_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Subsidy__c</fullName>
    <label>Adjusted Subsidy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Adjusted Subsidy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>