force-app/main/default/objects/Allotment__c/fields/Allotment_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Allotment_Sub_Type__c</fullName>
    <label>Allotment Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S14-1</fullName>
            </value>
            <value>
                <fullName>S14-9</fullName>
            </value>
            <value>
                <fullName>S15-5 (PA variation)</fullName>
            </value>
            <value>
                <fullName>National Aboriginal and Torres Strait Islander Flexible Aged Care Program</fullName>
            </value>
            <value>
                <fullName>NATSIFAC</fullName>
                <isActive>false</isActive>
                <label>NATSIFAC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>