force-app/main/default/objects/Allotment__c/fields/Care_Level__c.field-meta.xml
<CustomField>
    <fullName>Care_Level__c</fullName>
    <label>Care Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Term Restorative Care(STRC)</fullName>
            </value>
            <value>
                <fullName>Transition</fullName>
            </value>
            <value>
                <fullName>High(Innovative Pool)</fullName>
            </value>
            <value>
                <fullName>Low(Innovative Pool)</fullName>
            </value>
            <value>
                <fullName>Community(Innovative Pool)</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Residential(MPS)</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Home Care(MPS)</fullName>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>Multiple-Purpose Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>