force-app/main/default/objects/Allotment__c/fields/Care_Type__c.field-meta.xml
<CustomField>
    <fullName>Care_Type__c</fullName>
    <label>Care Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Flexible</fullName>
            </value>
            <value>
                <fullName>NATSIFAC</fullName>
            </value>
            <value>
                <fullName>Innovative Pool</fullName>
                <isActive>false</isActive>
                <label>Innovative Pool</label>
            </value>
            <value>
                <fullName>Multiple-Purpose Service</fullName>
                <isActive>false</isActive>
                <label>Multiple-Purpose Service</label>
            </value>
            <value>
                <fullName>Short Term Restorative Care(STRC)</fullName>
                <isActive>false</isActive>
                <label>Short Term Restorative Care(STRC)</label>
            </value>
            <value>
                <fullName>Transition Care</fullName>
                <isActive>false</isActive>
                <label>Transition Care</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>