force-app/main/default/objects/Allotment__c/fields/Ceased__c.field-meta.xml
<CustomField>
    <fullName>Ceased__c</fullName>
    <label>Ceased</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>