force-app/main/default/objects/Allotment__c/fields/Date_of_Allotment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Allotment__c</fullName>
    <label>Allotment Date</label>
    <type>Date</type>
</CustomField>