force-app/main/default/objects/Allotment__c/fields/End_Date_of_Allotment__c.field-meta.xml
<CustomField>
    <fullName>End_Date_of_Allotment__c</fullName>
    <label>End Date of Allotment</label>
    <type>Date</type>
</CustomField>