force-app/main/default/objects/Allotment__c/fields/Extra_Additional_Service__c.field-meta.xml
<CustomField>
    <fullName>Extra_Additional_Service__c</fullName>
    <label>Extra/Additional Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Extra Service - Distinct Part</fullName>
            </value>
            <value>
                <fullName>Extra Service - Whole Service</fullName>
            </value>
            <value>
                <fullName>Additional Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>