force-app/main/default/objects/Allotment__c/fields/GPMS_Care_Level_Community__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Care_Level_Community__c</fullName>
    <description>Count number of Community care type from places</description>
    <label>Care Level: Community</label>
    <summarizedField>Places_Allotment__c.Number_of_Places__c</summarizedField>
    <summaryFilterItems>
        <field>Places_Allotment__c.Care_Level__c</field>
        <operation>equals</operation>
        <value>Community</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Places_Allotment__c.Current__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>Places_Allotment__c.Allotment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>