force-app/main/default/objects/Allotment__c/fields/GPMS_Ceased__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Ceased__c</fullName>
    <label>Ceased</label>
    <summarizedField>Places_Allotment__c.Number_of_Places__c</summarizedField>
    <summaryFilterItems>
        <field>Places_Allotment__c.Status_of_Places__c</field>
        <operation>equals</operation>
        <value>Ceased</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Places_Allotment__c.Current__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>Places_Allotment__c.Allotment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>