force-app/main/default/objects/Allotment__c/fields/GPMS_Check_No__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Check_No__c</fullName>
    <description>Checking No status from places</description>
    <label>GPMS Check No</label>
    <summaryFilterItems>
        <field>Places_Allotment__c.Current__c</field>
        <operation>notEqual</operation>
        <value>No</value>
    </summaryFilterItems>
    <summaryForeignKey>Places_Allotment__c.Allotment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>