force-app/main/default/objects/Allotment__c/fields/GPMS_Check_Pending__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Check_Pending__c</fullName>
    <description>Checking if places have pending status</description>
    <label>Check Pending</label>
    <summaryFilterItems>
        <field>Places_Allotment__c.Current__c</field>
        <operation>notEqual</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>Places_Allotment__c.Allotment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>