force-app/main/default/objects/Allotment__c/fields/GPMS_Check_Yes__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Check_Yes__c</fullName>
    <description>Checking if places have Yes status</description>
    <label>Check Yes</label>
    <summaryFilterItems>
        <field>Places_Allotment__c.Current__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>Places_Allotment__c.Allotment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>