force-app/main/default/objects/Allotment__c/fields/GPMS_Mark_Documents_as_Sent__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Mark_Documents_as_Sent__c</fullName>
    <description>Users use this function the mark the date they sent the &apos;Notice of Allocation&apos; and &quot;Schedule of Conditions&apos;, which is important as it starts the clock for the PA period end date and updates the date of allotment.</description>
    <label>Documents Sent Date</label>
    <type>Date</type>
</CustomField>