force-app/main/default/objects/Allotment__c/fields/GPMS_Operational__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Operational__c</fullName>
    <description>Sum the all the operational places packet in the allotment</description>
    <label>Operational</label>
    <summarizedField>Places_Allotment__c.Number_of_Places__c</summarizedField>
    <summaryFilterItems>
        <field>Places_Allotment__c.Status_of_Places__c</field>
        <operation>equals</operation>
        <value>Operational</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Places_Allotment__c.Current__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>Places_Allotment__c.Allotment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>