force-app/main/default/objects/Allotment__c/fields/GPMS_Operational_Sum__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Operational_Sum__c</fullName>
    <description>Sum of current with pending or no places&apos;operational</description>
    <label>Operational Sum</label>
    <summarizedField>Places_Allotment__c.Number_of_Places__c</summarizedField>
    <summaryFilterItems>
        <field>Places_Allotment__c.Status_of_Places__c</field>
        <operation>equals</operation>
        <value>Operational</value>
    </summaryFilterItems>
    <summaryForeignKey>Places_Allotment__c.Allotment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>