force-app/main/default/objects/Allotment__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <label>Inactive</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>