force-app/main/default/objects/Allotment__c/fields/Link_to_Document__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Document__c</fullName>
    <label>Link to Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>