force-app/main/default/objects/Allotment__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>Address_Location__r.Address__r.Full_Address__c</formula>
    <label>Location</label>
    <type>Text</type>
</CustomField>