force-app/main/default/objects/Allotment__c/fields/Non_Operational__c.field-meta.xml
<CustomField>
    <fullName>Non_Operational__c</fullName>
    <label>Non-Operational</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>