force-app/main/default/objects/Allotment__c/fields/Number_of_Places__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Places__c</fullName>
    <label>Number of Places</label>
    <summarizedField>Places_Allotment__c.GPMS_Number_of_Remaining__c</summarizedField>
    <summaryFilterItems>
        <field>Places_Allotment__c.Current__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>Places_Allotment__c.Allotment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>