force-app/main/default/objects/Allotment__c/fields/Offline__c.field-meta.xml
<CustomField>
    <fullName>Offline__c</fullName>
    <label>Offline</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>