force-app/main/default/objects/Allotment__c/fields/Operational__c.field-meta.xml
<CustomField>
    <fullName>Operational__c</fullName>
    <label>Operational</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>