force-app/main/default/objects/Allotment__c/fields/Original_Date_of_Allotment__c.field-meta.xml
<CustomField>
    <fullName>Original_Date_of_Allotment__c</fullName>
    <label>Original Date of Allotment</label>
    <type>Date</type>
</CustomField>