force-app/main/default/objects/Allotment__c/fields/PA_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PA_Period_End_Date__c</fullName>
    <label>PA Period End Date</label>
    <type>Date</type>
</CustomField>