force-app/main/default/objects/Allotment__c/fields/Parent_Allotment__c.field-meta.xml
<CustomField>
    <fullName>Parent_Allotment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Allotment</label>
    <referenceTo>Allotment__c</referenceTo>
    <relationshipLabel>Child Allotments</relationshipLabel>
    <relationshipName>Allotments</relationshipName>
    <type>Lookup</type>
</CustomField>