force-app/main/default/objects/Allotment__c/fields/Pre_1997__c.field-meta.xml
<CustomField>
    <fullName>Pre_1997__c</fullName>
    <label>Pre 1997</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>