force-app/main/default/objects/Allotment__c/fields/SA2__c.field-meta.xml
<CustomField>
    <fullName>SA2__c</fullName>
    <label>SA2</label>
    <summarizedField>Service_Delivery_Area__c.Number_of_Places__c</summarizedField>
    <summaryFilterItems>
        <field>Service_Delivery_Area__c.Type__c</field>
        <operation>equals</operation>
        <value>SA2</value>
    </summaryFilterItems>
    <summaryForeignKey>Service_Delivery_Area__c.Allotment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>