force-app/main/default/objects/Allotment__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S15-1 Provisional allocation (Provisional)</fullName>
            </value>
            <value>
                <fullName>S15-1 Determined to be in effect at time of allocation (Operational)</fullName>
            </value>
            <value>
                <fullName>Funding agreement signed (operational)</fullName>
            </value>
            <value>
                <fullName>Expired under S14-9(4)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>