force-app/main/default/objects/Allotment__c/fields/Suspended__c.field-meta.xml
<CustomField>
    <fullName>Suspended__c</fullName>
    <label>Suspended</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>