force-app/main/default/objects/Allotment__c/fields/Transferred_From__c.field-meta.xml
<CustomField>
    <fullName>Transferred_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transferred From</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Allotments (Transferred From)</relationshipLabel>
    <relationshipName>Transferred_From</relationshipName>
    <type>Lookup</type>
</CustomField>