force-app/main/default/objects/Allotment__c/fields/Varied_From__c.field-meta.xml
<CustomField>
    <fullName>Varied_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Varied From</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Allotments (Varied From)</relationshipLabel>
    <relationshipName>Varied_From</relationshipName>
    <type>Lookup</type>
</CustomField>