force-app/main/default/objects/Allotment__c/fields/Waiver_Type__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Type__c</fullName>
    <label>Waiver Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>14-4(1)</fullName>
            </value>
            <value>
                <fullName>14-4(2) - Bed-Ready Places</fullName>
            </value>
            <value>
                <fullName>14-4(2) -Other</fullName>
                <label>14-4(2) - Other</label>
            </value>
            <value>
                <fullName>14-4(3)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>