force-app/main/default/objects/Allotment__c/fields/Zero_Real_Interest_Loan_ZRIL_Allocatio__c.field-meta.xml
<CustomField>
    <fullName>Zero_Real_Interest_Loan_ZRIL_Allocatio__c</fullName>
    <label>Zero Real Interest Loan(ZRIL) Allocation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>