force-app/main/default/objects/Allotment__c/fields/ZIRL_Year__c.field-meta.xml
<CustomField>
    <fullName>ZIRL_Year__c</fullName>
    <label>ZRIL Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>All_Years</valueSetName>
    </valueSet>
</CustomField>