force-app/main/default/objects/Allotment__c/fields/ZRIL_Round__c.field-meta.xml
<CustomField>
    <fullName>ZRIL_Round__c</fullName>
    <label>ZRIL Round</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>