force-app/main/default/objects/Allotment__c/recordTypes/Approved_Provider_Flexible_ALM.recordType-meta.xml
<RecordType>
    <fullName>Approved_Provider_Flexible_ALM</fullName>
    <active>true</active>
    <label>Approved Provider Flexible</label>
</RecordType>