force-app/main/default/objects/Allotment__c/recordTypes/Approved_Provider_Residential_ALM.recordType-meta.xml
<RecordType>
    <fullName>Approved_Provider_Residential_ALM</fullName>
    <active>true</active>
    <label>Approved Provider Residential</label>
</RecordType>