force-app/main/default/objects/Allotment__c/recordTypes/NATSIFAC_Flexible_ALT.recordType-meta.xml
<RecordType>
    <fullName>NATSIFAC_Flexible_ALT</fullName>
    <active>true</active>
    <label>NATSIFAC Flexible</label>
</RecordType>